Wrong PT localization texts
* Back should be Voltar
* CORTA should be RECORTAR

--- a/packages/flutter_localizations/lib/src/l10n/material_pt.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_pt.arb
@@ -4,7 +4,7 @@
   "@anteMeridiemAbbreviation": { "notUsed": "Portuguese time format does not use a.m. indicator" },
   "@postMeridiemAbbreviation": { "notUsed": "Portuguese time format does not use p.m. indicator" },
   "openAppDrawerTooltip": "Abrir menu de navegação",
-  "backButtonTooltip": "Costas",
+  "backButtonTooltip": "Voltar",
   "closeButtonTooltip": "Fechar",
   "nextMonthTooltip": "Próximo mês",
   "previousMonthTooltip": "Mês anterior",
@@ -20,8 +20,8 @@
   "cancelButtonLabel": "CANCELAR",
   "closeButtonLabel": "FECHAR",
   "continueButtonLabel": "CONTINUAR",
-  "copyButtonLabel": "CÓPIA DE",
-  "cutButtonLabel": "CORTA",
+  "copyButtonLabel": "COPIAR",
+  "cutButtonLabel": "RECORTAR",
   "okButtonLabel": "OK",
   "pasteButtonLabel": "COLAR",
   "selectAllButtonLabel": "SELECIONAR TUDO",
