fix translations; remove @mustCallSuper in describeSemanticsConfiguration

--- a/packages/flutter_localizations/lib/src/l10n/material_de.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_de.arb
@@ -29,6 +29,6 @@
   "viewLicensesButtonLabel": "LIZENZEN ANZEIGEN",
   "anteMeridiemAbbreviation": "VORM.",
   "postMeridiemAbbreviation": "NACHM.",
-  "timePickerHourModeAnnouncement": "Wählen Sie Stunden",
-  "timePickerMinuteModeAnnouncement": "Wählen Sie Minuten"
+  "timePickerHourModeAnnouncement": "Stunde auswählen",
+  "timePickerMinuteModeAnnouncement": "Minute auswählen"
 }
