--- a/packages/flutter_localizations/lib/src/l10n/material_en.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_en.arb
@@ -145,12 +145,12 @@
     "description": "The abbreviation for post meridiem (after noon) shown in the time picker. Translations for this abbreviation will only be provided for locales that support it."
   },
 
-  "timePickerHourModeAnnouncement": "Select hours.",
+  "timePickerHourModeAnnouncement": "Select hours",
   "@timePickerHourModeAnnouncement": {
     "description": "The audio announcement made when the time picker dialog is set to hour mode."
   },
 
-  "timePickerMinuteModeAnnouncement": "Select minutes.",
+  "timePickerMinuteModeAnnouncement": "Select minutes",
   "@timePickerMinuteModeAnnouncement": {
     "description": "The audio announcement made when the time picker dialog is set to minute mode."
   }
