--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ Vincent Le Quéméner <eu.lequem@gmail.com>
 Mike Hoolehan <mike@hoolehan.com>
 German Saprykin <saprykin.h@gmail.com>
 Stefano Rodriguez <hlsroddy@gmail.com>
+Fredrik Simón <fredrik@fsimon.net>
