--- a/packages/flutter_localizations/lib/src/l10n/material_en.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_en.arb
@@ -157,6 +157,6 @@
 
   "modalBarrierDismissLabel": "Dismiss",
   "@modalBarrierDismissLabel": {
-    "description": "Accessibility label used to annotate a dismissible modal barriers."
+    "description": "Accessibility label used to annotate a dismissible modal barrier."
   }
 }
