--- a/packages/flutter_localizations/lib/src/l10n/material_en.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_en.arb
@@ -153,10 +153,10 @@
   "timePickerMinuteModeAnnouncement": "Select minutes",
   "@timePickerMinuteModeAnnouncement": {
     "description": "The audio announcement made when the time picker dialog is set to minute mode."
-  }
+  },
 
   "modalBarrierDismissLabel": "Dismiss",
   "@modalBarrierDismissLabel": {
-    "description": "Accessibility label used to annotate a dismissible modal barrier."
+    "description": "Label read out by accessibility tools (TalkBack or VocieOver) for a modal barrier to indicate that a tap dismisses the barrier. A modal barrier can for example be found behind a alert or popup to block interaction with elements behind the alert/popup."
   }
 }
