updated per review feedback

--- a/packages/flutter_localizations/lib/src/l10n/material_th.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_th.arb
@@ -1,5 +1,5 @@
 {
-  "scriptCategory": "dense",
+  "scriptCategory": "tall",
   "timeOfDayFormat": "ah:mm",
   "openAppDrawerTooltip": "เปิดเมนูการนำทาง",
   "backButtonTooltip": "กลับ",
