--- a/packages/flutter_localizations/lib/src/l10n/material_ru.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ru.arb
@@ -33,5 +33,8 @@
   "postMeridiemAbbreviation": "PM",
   "timePickerHourModeAnnouncement": "Выберите часы",
   "timePickerMinuteModeAnnouncement": "Выберите минуты",
+  "signedInLabel": "Авторизованный",
+  "hideAccountsLabel": "Спрятать аккаунты",
+  "showAccountsLabel": "Показать аккаунты",
   "modalBarrierDismissLabel": "Закрыть"
 }
