better Russian translation

--- a/packages/flutter_localizations/lib/src/l10n/material_ru.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ru.arb
@@ -33,7 +33,7 @@
   "postMeridiemAbbreviation": "PM",
   "timePickerHourModeAnnouncement": "Выберите часы",
   "timePickerMinuteModeAnnouncement": "Выберите минуты",
-  "signedInLabel": "Авторизованный",
+  "signedInLabel": "Залогинен",
   "hideAccountsLabel": "Спрятать аккаунты",
   "showAccountsLabel": "Показать аккаунты",
   "modalBarrierDismissLabel": "Закрыть"
