--- a/packages/flutter_localizations/lib/src/l10n/material_tr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_tr.arb
@@ -30,7 +30,7 @@
   "postMeridiemAbbreviation": "ÖS",
   "timePickerHourModeAnnouncement": "Saati seçin",
   "timePickerMinuteModeAnnouncement": "Dakikayı seçin",
-  "signedInLabel": "Giriş yapıldı",
+  "signedInLabel": "Yetkili",
   "hideAccountsLabel": "Hesapları gizle",
   "showAccountsLabel": "Hesapları göster",
   "modalBarrierDismissLabel": "Reddet"
