--- a/packages/flutter_localizations/lib/src/l10n/material_fr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fr.arb
@@ -31,7 +31,7 @@
   "postMeridiemAbbreviation": "PM",
   "timePickerHourModeAnnouncement": "Sélectionner une heure",
   "timePickerMinuteModeAnnouncement": "Sélectionner des minutes",
-  "signedInLabel": "Signé",
+  "signedInLabel": "Connecté",
   "hideAccountsLabel": "Masquer les comptes",
   "showAccountsLabel": "Afficher les comptes",
   "modalBarrierDismissLabel": "Ignorer"
