--- a/packages/flutter_localizations/lib/src/l10n/material_ja.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ja.arb
@@ -30,7 +30,7 @@
   "postMeridiemAbbreviation": "PM",
   "timePickerHourModeAnnouncement": "時間を選択",
   "timePickerMinuteModeAnnouncement": "分を選択",
-  "signedInLabel": "署名された",
+  "signedInLabel": "ログイン中",
   "hideAccountsLabel": "アカウントを隠す",
   "showAccountsLabel": "アカウントを表示する",
   "modalBarrierDismissLabel": "閉じる"
