--- a/packages/flutter_localizations/lib/src/l10n/material_sw.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sw.arb
@@ -52,5 +52,5 @@
     "remainingTextFieldCharacterCountZero": "Hapana herufi zilizo baki",
     "remainingTextFieldCharacterCountOne": "Herufi 1 imebaki",
     "remainingTextFieldCharacterCountOther": "herufi $remainingCount zimebaki",
-    "refreshIndicatorSemanticLabel": "Refresh",
+    "refreshIndicatorSemanticLabel": "Refresh"
 }
