Addition of `shouldRebuild` to `StatelessWidget` to allow widgets to decide when they should be rebuilt. For instance if the constructor parmeters differ. This operates like CustomPainter.shouldRepaint and CustomClipper.shouldReclip.

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,3 +30,4 @@ Felix Schmidt <felix.free@gmx.de>
 Artur Rymarz <artur.rymarz@gmail.com>
 Stefan Mitev <mr.mitew@gmail.com>
 Mattijs Fuijkschot <mattijs.fuijkschot@gmail.com>
+Simon Lightfoot <simon@devangels.london>
