--- a/packages/flutter_localizations/lib/src/l10n/material_uk.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_uk.arb
@@ -35,7 +35,7 @@
   "postMeridiemAbbreviation": "пп",
   "timePickerHourModeAnnouncement": "Виберіть години",
   "timePickerMinuteModeAnnouncement": "Виберіть хвилини",
-  "modalBarrierDismissLabel": "Усунути",
+  "modalBarrierDismissLabel": "Сховати",
   "signedInLabel": "Ви ввійшли",
   "hideAccountsLabel": "Сховати облікові записи",
   "showAccountsLabel": "Показати облікові записи",
@@ -52,8 +52,8 @@
   "reorderItemRight": "Перемістити праворуч",
   "expandedIconTapHint": "Згорнути",
   "collapsedIconTapHint": "Розгорнути",
-  "remainingTextFieldCharacterCountZero": "TBD",
+  "remainingTextFieldCharacterCountZero": "Не залишилося символів",
   "remainingTextFieldCharacterCountOne": "Залишився 1 символ",
-  "remainingTextFieldCharacterCountOther": "Залишилося $remainingCount символу",
-  "refreshIndicatorSemanticLabel": "TBD"
+  "remainingTextFieldCharacterCountOther": "Залишилося $remainingCount символів",
+  "refreshIndicatorSemanticLabel": "Оновити"
 }
