--- a/AUTHORS
+++ b/AUTHORS
@@ -94,3 +94,4 @@ Twin Sun, LLC <google-contrib@twinsunsolutions.com>
 Taskulu LDA <contributions@taskulu.com>
 Jonathan Joelson <jon@joelson.co>
 Elsabe Ros <hello@elsabe.dev>
+Tomasz Gucio <tgucio@gmail.com>
