--- a/packages/flutter_localizations/lib/src/l10n/material_en.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_en.arb
@@ -71,6 +71,12 @@
     "description": "The tooltip for the button that shows a popup menu."
   },
 
+  "scrimOnTapHint": "Close $modalRouteName",
+  "@scrimOnTapHint": {
+    "description": "The onTapHint for the scrim rendered underneath a modal route which users can tap to dismiss the modal route",
+    "parameters": "modalRouteName"
+  },
+
   "aboutListTileTitle": "About $applicationName",
   "@aboutListTileTitle": {
     "description": "The default title for the drawer item that shows an about page for the application. The value of $applicationName is the name of the application, like GMail or Chrome.",
@@ -151,9 +157,14 @@
     "plural": "selectedRowCount"
   },
 
-  "scrim": "Scrim",
-  "@scrim": {
+  "scrimLabel": "Scrim",
+  "@scrimLabel": {
     "description": "The label for the scrim rendered underneath a modal route."
+  },
+
+  "bottomSheetLabel": "Bottom Sheet",
+  "@bottomSheetLabel": {
+    "description": "The label for a BottomSheet."
   },
 
   "cancelButtonLabel": "CANCEL",
