--- a/packages/flutter_localizations/lib/src/l10n/material_fa.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fa.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "فاصله",
   "keyboardKeyMetaMacOs": "فرمان",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "منوی نوار منو"
+  "menuBarMenuLabel": "منوی نوار منو",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
