--- a/packages/flutter_localizations/lib/src/l10n/material_hr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hr.arb
@@ -132,5 +132,8 @@
   "keyboardKeySpace": "Razmaknica",
   "keyboardKeyMetaMacOs": "Naredba",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Izbornik trake izbornika"
+  "menuBarMenuLabel": "Izbornik trake izbornika",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
