--- a/packages/flutter_localizations/lib/src/l10n/material_az.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_az.arb
@@ -128,5 +128,8 @@
   "keyboardKeySpace": "Boşluq",
   "keyboardKeyMetaMacOs": "Əmr",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menyu paneli menyusu"
+  "menuBarMenuLabel": "Menyu paneli menyusu",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
