--- a/packages/flutter_localizations/lib/src/l10n/material_ca.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ca.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "Espai",
   "keyboardKeyMetaMacOs": "Ordre",
   "keyboardKeyMetaWindows": "Windows",
-  "menuBarMenuLabel": "Menú de la barra de menú"
+  "menuBarMenuLabel": "Menú de la barra de menú",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
