--- a/packages/flutter_localizations/lib/src/l10n/material_de.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_de.arb
@@ -130,5 +130,8 @@
   "keyboardKeySpace": "Leertaste",
   "keyboardKeyMetaMacOs": "Befehl",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menü in der Menüleiste"
+  "menuBarMenuLabel": "Menü in der Menüleiste",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
