--- a/packages/flutter_localizations/lib/src/l10n/material_es.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_es.arb
@@ -130,5 +130,8 @@
   "keyboardKeySpace": "Espacio",
   "keyboardKeyMetaMacOs": "Comando",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menú de la barra de menú"
+  "menuBarMenuLabel": "Menú de la barra de menú",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
