--- a/packages/flutter_localizations/lib/src/l10n/material_et.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_et.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "Tühik",
   "keyboardKeyMetaMacOs": "Käsk",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menüüriba menüü"
+  "menuBarMenuLabel": "Menüüriba menüü",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
