--- a/packages/flutter_localizations/lib/src/l10n/material_eu.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_eu.arb
@@ -128,5 +128,8 @@
   "keyboardKeySpace": "Zuriune-barra",
   "keyboardKeyMetaMacOs": "Komandoa",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menu-barraren menua"
+  "menuBarMenuLabel": "Menu-barraren menua",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
