--- a/packages/flutter_localizations/lib/src/l10n/material_fi.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fi.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "Välilyönti",
   "keyboardKeyMetaMacOs": "Komento",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Valikkopalkki"
+  "menuBarMenuLabel": "Valikkopalkki",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
