--- a/packages/flutter_localizations/lib/src/l10n/material_hy.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hy.arb
@@ -134,5 +134,8 @@
   "keyboardKeySpace": "Բացատ",
   "keyboardKeyMetaMacOs": "Command",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Ընտրացանկի գոտու ընտրացանկ"
+  "menuBarMenuLabel": "Ընտրացանկի գոտու ընտրացանկ",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
