--- a/packages/flutter_localizations/lib/src/l10n/material_it.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_it.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "Barra spaziatrice",
   "keyboardKeyMetaMacOs": "Comando",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menu barra dei menu"
+  "menuBarMenuLabel": "Menu barra dei menu",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
