--- a/packages/flutter_localizations/lib/src/l10n/material_lv.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_lv.arb
@@ -130,5 +130,8 @@
   "keyboardKeySpace": "Atstarpes taustiņš",
   "keyboardKeyMetaMacOs": "Command",
   "keyboardKeyMetaWindows": "Windows",
-  "menuBarMenuLabel": "Izvēļņu joslas izvēlne"
+  "menuBarMenuLabel": "Izvēļņu joslas izvēlne",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
