--- a/packages/flutter_localizations/lib/src/l10n/material_mn.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_mn.arb
@@ -130,5 +130,8 @@
   "keyboardKeySpace": "Space",
   "keyboardKeyMetaMacOs": "Тушаал",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Цэсний талбарын цэс"
+  "menuBarMenuLabel": "Цэсний талбарын цэс",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
