--- a/packages/flutter_localizations/lib/src/l10n/material_mr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_mr.arb
@@ -130,5 +130,8 @@
   "keyboardKeySpace": "स्पेस",
   "keyboardKeyMetaMacOs": "कमांड",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "मेनू बार मेनू"
+  "menuBarMenuLabel": "मेनू बार मेनू",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
