--- a/packages/flutter_localizations/lib/src/l10n/material_my.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_my.arb
@@ -128,5 +128,8 @@
   "keyboardKeySpace": "နေရာခြားခလုတ်",
   "keyboardKeyMetaMacOs": "ကွန်မန်း",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "မီနူးဘား မီနူး"
+  "menuBarMenuLabel": "မီနူးဘား မီနူး",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
