--- a/packages/flutter_localizations/lib/src/l10n/material_tr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_tr.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "Boşluk",
   "keyboardKeyMetaMacOs": "Komut",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "Menü çubuğu menüsü"
+  "menuBarMenuLabel": "Menü çubuğu menüsü",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
