--- a/packages/flutter_localizations/lib/src/l10n/material_zh.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_zh.arb
@@ -129,5 +129,8 @@
   "keyboardKeySpace": "空格键",
   "keyboardKeyMetaMacOs": "⌘",
   "keyboardKeyMetaWindows": "Win",
-  "menuBarMenuLabel": "菜单栏的菜单"
+  "menuBarMenuLabel": "菜单栏的菜单",
+  "scrimLabel": "Scrim",
+  "scrimOnTapHint": "Close $modalRouteName",
+  "bottomSheetLabel": "Bottom Sheet"
 }
