Update Somali localizations for accuracy and plurals
Corrected plural forms and improved translations in Somali ARB and generated localization files for both Cupertino and Material localizations. Changes include more accurate pluralization for hours, seconds, licenses, items, and character counts, as well as improved translations for date range and related labels.

--- a/packages/flutter_localizations/lib/src/l10n/cupertino_so.arb
+++ b/packages/flutter_localizations/lib/src/l10n/cupertino_so.arb
@@ -1,6 +1,6 @@
 {
   "datePickerHourSemanticsLabelOne": "Saacad $hour buuxda",
-  "datePickerHourSemanticsLabelOther": "Saacad $hour buuxda",
+  "datePickerHourSemanticsLabelOther": "Saacado $hour buuxda",
 
   "datePickerMinuteSemanticsLabelOne": "1 daqiiqad",
   "datePickerMinuteSemanticsLabelOther": "$minute daqiiqadood",
@@ -21,7 +21,7 @@
   "timerPickerMinuteLabelOther": "daqiiqadood",
 
   "timerPickerSecondLabelOne": "ilbiriqsi",
-  "timerPickerSecondLabelOther": "ilbiriqsi",
+  "timerPickerSecondLabelOther": "ilbiriqsiyo",
 
   "cutButtonLabel": "Jar",
   "copyButtonLabel": "Koobi",
